--- a/01/demo2/2.1/Jenkinsfile
+++ b/01/demo2/2.1/Jenkinsfile
@@ -8,7 +8,9 @@ pipeline {
 
   stages {
     stage('Audit tools') {
-      auditTools()
+      steps {
+        auditTools()
+      }
     }
   }
 }
